# vhdx-core

./: .pre-commit-config.yaml  Cargo.toml  PLAN.md  README.md
.github/workflows/: ci.yml
corpus/: fetch.sh
docs/: corpus-validation.md  implementation-notes.md  privacy.md  terms.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_open.rs
vhdx/: Cargo.toml  README.md
vhdx-cli/: Cargo.toml
vhdx-cli/src/: main.rs
vhdx-cli/tests/: cli.rs
vhdx-cli/tests/data/: SOURCES.md
vhdx/src/: bat.rs  header.rs  lib.rs  log.rs  metadata.rs  reader.rs  region.rs
vhdx/tests/: compat.rs  corpus.rs  corpus_differential.rs  differential.rs  log_replay.rs  real_images.rs
vhdx/tests/data/: README.md
