[package]
name = "vhdx"
version = "0.2.0"
edition = "2021"
rust-version = "1.85"
description = "Pure-Rust read-only VHDX container reader"
license = "MIT"
repository = "https://github.com/SecurityRonin/vhdx"
homepage = "https://github.com/SecurityRonin/vhdx"
documentation = "https://docs.rs/vhdx"
authors = ["Albert Hui"]
keywords = ["forensics", "vhdx", "disk-image", "windows", "hyper-v"]
categories = ["parser-implementations", "filesystem"]
readme = "../README.md"
exclude = ["tests/data/"]

[dependencies]
thiserror = "2"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
